samba (2:3.5.6~dfsg-2) UNRELEASED; urgency=low

  * Support armh port. Closes: #604523 

  [ Debconf translations ]  
  * Catalan (Jordi Mallach).  Closes: #601101
  * Japanese (Kenshi Muto).  Closes: #601364
  * Bulgarian (Damyan Ivanov).  Closes: #601366
  * Hebrew (Omer Zak).  Closes: #601633
  * Kurdish (Erdal Ronahî).  Closes: #601719
  * Dutch (Remco Rijnders).  Closes: #602220

 -- Christian Perrier <bubulle@debian.org>  Tue, 02 Nov 2010 17:23:15 +0100

samba (2:3.5.6~dfsg-1) unstable; urgency=low

  * New upstream release. Fixes the following Debian bug:
    - rpcclient readline segfault. Closes: #597203

 -- Christian Perrier <bubulle@debian.org>  Sun, 10 Oct 2010 09:59:37 +0200

samba (2:3.5.5~dfsg-1) unstable; urgency=high

  [ Christian Perrier ]
  * New upstream release. Security release fixing:
    - CVE-2019-3069: Buffer overrun vulnerability in sid_parse.
      Closes: #596891.
  * Fix comment in swat's postinst. It is not turned off by default
    Closes: #596040
  * Drop transition code from (pre-etch) 3.0.20b-3 version in swat postinst

  [ Steve Langasek ]
  * debian/control: winbind needs libpam-runtime (>= 1.0.1-6) for
    pam-auth-update.  Closes: #594325.

  [ Debconf translations ]  
  * Arabic (Ossama Khayat).  Closes: #596164

 -- Christian Perrier <bubulle@debian.org>  Tue, 14 Sep 2010 23:03:35 +0200

samba (2:3.5.4~dfsg-2) unstable; urgency=low

  * Release to unstable

  [ Debconf translations ]  
  * Danish (Joe Dalton).  Closes: #592789.
  * Galician (Jorge Barreiro).  Closes: #592809

  [ Steve Langasek ]
  * debian/patches/fhs-filespaths.patch, debian/samba.postinst,
    debian/winbind.postinst: move some files from /etc/samba to
    /var/lib/samba where they belong: MACHINE.SID, schannel_store.tdb,
    and idmap2.tdb.

 -- Christian Perrier <bubulle@debian.org>  Tue, 07 Sep 2010 17:47:32 +0200

samba (2:3.5.4~dfsg-1) experimental; urgency=low

  * New upstream release
