@@ -1,6 +1,8 @@
 samba (2:3.5.6~dfsg-2) UNRELEASED; urgency=low
 
   * Support armh port. Closes: #604523 
+  * Fix debian/rules update-archs target to not add extra spaces on every
+    invocation...
 
   [ Debconf translations ]  
   * Catalan (Jordi Mallach).  Closes: #601101
